k8s_manifests/fe_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kraken-frontend
  labels:
    app: kraken-frontend
    app.kubernetes.io/component: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kraken-frontend
  template:
    metadata:
      labels:
        app: kraken-frontend
    spec:
      containers:
        - name: streamlit-app
          image: ghcr.io/ottawacloudconsulting/kraken-trading-api:latestghcr.io/ottawacloudconsulting/kraken-trading-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          volumeMounts:
            - name: reports-storage
              mountPath: /app/reports
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: reports-storage
          persistentVolumeClaim:
            claimName: reports-pvc
