k8s_manifests/observability.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentbit
  labels:
    app.kubernetes.io/component: logging
spec:
  selector:
    matchLabels:
      name: fluentbit
  template:
    metadata:
      labels:
        name: fluentbit
    spec:
      containers:
        - name: fluentbit
          image: fluent/fluent-bit:latest
          volumeMounts:
            - name: fluentbit-config
              mountPath: /fluent-bit/etc/
      volumes:
        - name: fluentbit-config
          configMap:
            name: fluentbit-config
