k8s_manifests/trigger-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trigger-api
  labels:
    app: trigger-api
    app.kubernetes.io/component: trigger-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trigger-api
  template:
    metadata:
      labels:
        app: trigger-api
    spec:
      serviceAccountName: trigger-api-sa
      containers:
        - name: trigger-api
          image: ghcr.io/ottawacloudconsulting/kraken-trigger-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      restartPolicy: Always
